--- a/MacRecipe/Views/Home/Index.cshtml
+++ b/MacRecipe/Views/Home/Index.cshtml
@@ -2,19 +2,152 @@
     ViewBag.Title = "MacRecipe - Hackday2016";
 }
 
-<div class="jumbotron">
-    <h1>MacRecipe</h1>
+<div class="row">
+    <div class="large-12 small-12">
+        <h1 class="small mt20">MacRecipe</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in consectetur mi. Proin placerat tempus tempor. Sed pulvinar blandit varius.
+            Pellentesque varius placerat urna. Maecenas augue felis, porta ac mollis sit amet, feugiat ut eros.
+        </p>
+    </div>
     
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-    
-    </div>
-    <div class="col-md-4">
-    
-    </div>
-    <div class="col-md-4">
-    
+    <div class="large-12 small-12">
+        <form class="macmillan-form">
+            <fieldset class="field">
+                <div class="row">
+                    <!-- Recipe One -->
+                    <div class="large-6 small-12 recipe">
+                        <div class="row">
+                            <div class="large-6">
+                                <div class="form-checkbox">
+                                    <input aria-required="false" class="checkbox" id="recipeOne" name="recipe.One" type="checkbox" value="true">
+                                    <input name="recipe.One" type="hidden" value="false">
+                                    <label class="single-checkbox" for="recipeOne">
+                                        <img src="~/Content/images/chicken-curry768x768_tcm9-149087.jpg" alt="Chicken curry" />
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="large-6">
+                                <h2 class="small">Chicken curry</h2>
+                                <p class="small"><span class="icon icon-watch"></span> 45 mins</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Recipe Two -->
+                    <div class="large-6 small-12 recipe">
+                        <div class="row">
+                            <div class="large-6">
+                                <div class="form-checkbox">
+                                    <input aria-required="false" class="checkbox" id="recipeTwo" name="recipe.Two" type="checkbox" value="true">
+                                    <input name="recipe.Two" type="hidden" value="false">
+                                    <label class="single-checkbox" for="recipeTwo">
+                                        <img src="~/Content/images/chiken-thighs-with-crumbed-tomatoes768x768_tcm9-149091.jpg" alt="Chicken thighs" />
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="large-6">
+                                <h2 class="small">Chicken thighs with crumbed tomatoes</h2>
+                                <p class="small"><span class="icon icon-watch"></span> 1 hour</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <!-- Recipe Three -->
+                    <div class="large-6 small-12 recipe">
+                        <div class="row">
+                            <div class="large-6">
+                                <div class="form-checkbox">
+                                    <input aria-required="false" class="checkbox" id="recipeThree" name="recipe.Three" type="checkbox" value="true">
+                                    <input name="recipe.Three" type="hidden" value="false">
+                                    <label class="single-checkbox" for="recipeThree">
+                                        <img src="~/Content/images/cod-viennoise768x768_tcm9-149095.jpg" alt="Chicken curry" />
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="large-6">
+                                <h2 class="small">Cod Viennoise</h2>
+                                <p class="small"><span class="icon icon-watch"></span> 45 mins</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Recipe Four -->
+                    <div class="large-6 small-12 recipe">
+                        <div class="row">
+                            <div class="large-6">
+                                <div class="form-checkbox">
+                                    <input aria-required="false" class="checkbox" id="recipeFour" name="recipe.Four" type="checkbox" value="true">
+                                    <input name="recipe.Four" type="hidden" value="false">
+                                    <label class="single-checkbox" for="recipeFour">
+                                        <img src="~/Content/images/creamy-seafood-pasta768x768_tcm9-149096.jpg" alt="Chicken thighs" />
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="large-6">
+                                <h2 class="small">Creamy seafood pasta</h2>
+                                <p class="small"><span class="icon icon-watch"></span> 1 hour</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <!-- Recipe Five -->
+                    <div class="large-6 small-12 recipe">
+                        <div class="row">
+                            <div class="large-6">
+                                <div class="form-checkbox">
+                                    <input aria-required="false" class="checkbox" id="recipeFive" name="recipe.Five" type="checkbox" value="true">
+                                    <input name="recipe.Five" type="hidden" value="false">
+                                    <label class="single-checkbox" for="recipeFive">
+                                        <img src="~/Content/images/fish-with-tomatoes768x768_tcm9-149097.jpg" alt="Chicken curry" />
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="large-6">
+                                <h2 class="small">Fish with tomatoes</h2>
+                                <p class="small"><span class="icon icon-watch"></span> 45 mins</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Recipe Six -->
+                    <div class="large-6 small-12 recipe">
+                        <div class="row">
+                            <div class="large-6">
+                                <div class="form-checkbox">
+                                    <input aria-required="false" class="checkbox" id="recipeSix" name="recipe.Six" type="checkbox" value="true">
+                                    <input name="recipe.Six" type="hidden" value="false">
+                                    <label class="single-checkbox" for="recipeSix">
+                                        <img src="~/Content/images/spring-vegetable-casserole768x768_tcm9-149129.jpg" alt="Chicken thighs" />
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="large-6">
+                                <h2 class="small">Spring vegetable casserole</h2>
+                                <p class="small"><span class="icon icon-watch"></span> 1 hour</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Submit -->
+                <div class="row">
+                    <div class="large-12">
+                        <button class="btn mid-green">Invite your friends</button>
+                    </div>
+                </div>
+            </fieldset>
+        </form>
     </div>
 </div>
