updated the url

--- a/MacRecipe/EmailTemplates/InviteEmail.cshtml
+++ b/MacRecipe/EmailTemplates/InviteEmail.cshtml
@@ -32,7 +32,7 @@
         <p>
             Just click on the link below to cast your vote. Once everyone has made their selection the most popular dish will be served! Please bring your donations on the night.
 
-            <a href="http://macrecipe.azurewebsites.net/?token=@Model.InviteToken">http://macrecipe.azurewebsites.net/?token=@Model.InviteToken</a>
+            <a href="http://macrecipe.azurewebsites.net/home/SelectedRecipes?token=@Model.InviteToken">http://macrecipe.azurewebsites.net/home/SelectedRecipes?token=@Model.InviteToken</a>
         </p>
 
 
