--- a/MacRecipe/Views/Home/Invites.cshtml
+++ b/MacRecipe/Views/Home/Invites.cshtml
@@ -5,7 +5,7 @@
 
     <div class="large-8 small-12">
         <h1 class="small mt20">@ViewBag.Title</h1>
-        <p>@ViewBag.Message</p>
+        @*<p>@ViewBag.Message</p>*@
 
     </div>
 </div>
@@ -17,22 +17,19 @@
             <fieldset class="field">
                 <div class="row">
                     <div class="large-12 small-12">
+                        <label for="friendOneName">Name</label>
+                        <input class="text-input" type="text" id="friendOneName" name="friend.One.Name">
+
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="large-12 small-12">
                         <label for="friendOne">Email address</label>
                         <input class="text-input" type="text" id="friendOne" name="friend.One">
                     </div>
                 </div>
-                <div class="row">
-                    <div class="large-12 small-12">
-                        <label for="friendTwo">Email address</label>
-                        <input class="text-input" type="text" id="friendTwo" name="friend.Two">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="large-12 small-12">
-                        <label for="friendThree">Email address</label>
-                        <input class="text-input" type="text" id="friendThree" name="friend.Three">
-                    </div>
-                </div>
+                
                 <div class="row">
                     <div class="large-12 small-12">
                         <div class="form-checkbox">
